fixed basket logo, add hover effect to footer links, changed Submutit button, fixed materials POTR POTS link, changed font-sizes on Subtitles, added margin bottom on mobile - for whom section

--- a/src/styles/blocks/benefits.scss
+++ b/src/styles/blocks/benefits.scss
@@ -71,6 +71,13 @@
 
     @include onTablet {
       white-space: nowrap;
+      font-size: 36px;
+      line-height: 54px;
+    }
+
+    @include onDesktop {
+      font-size: 36px;
+      line-height: 54px;
     }
   }
 
