--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -12,23 +12,6 @@
     @include onDesktop {
       display: none;
     }
-
-    // @include onDesktop {
-    //   &--desktop {
-    //     display: block;
-    //     width: 48px;
-    //     height: 48px;
-    //     background-image: url(../images/basket.svg);
-    //     background-size: cover;
-    //     background-position: center;
-    //     background-repeat: no-repeat;
-    //     transition-duration: 0.5s;
-
-    //     &:hover {
-    //       transform: rotate(-7deg) scale(1.2);
-    //     }
-    //   }
-    // }
   }
 
   &-menu-desktop {
@@ -45,7 +28,8 @@
       display: block;
       width: 48px;
       height: 48px;
-      background-image: url(../images/basket.svg);
+      background-image: url(../images/baskett.png);
+
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
