--- a/src/styles/blocks/message-us.scss
+++ b/src/styles/blocks/message-us.scss
@@ -78,8 +78,15 @@
   }
 
   &__info-link {
+    display: block;
     color: $colorBlack;
     text-decoration: none;
+
+    &:hover {
+      font-weight: bold;
+      transform: scale(1.1);
+
+    }
   }
 
   &__field {
