--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -49,4 +49,10 @@
       transform: scale(1.2);
     }
   }
+
+  &__item--margin {
+    @include onMobile {
+      margin-bottom: 70px;
+    }
+  }
 }
