--- a/src/styles/blocks/side-sign.scss
+++ b/src/styles/blocks/side-sign.scss
@@ -108,31 +108,31 @@
 
     &--materials-left {
       display: none;
-      transform: rotate(-90deg) translateX(-138px);
+      transform: rotate(90deg) translateX(-138px);
 
       @include onTablet {
         display: flex;
-        top: 4024px;
+        top: 4162px;
         left: calc(0% + 10px);
 
         @media (min-width: 847px) {
-          top: 4280px;
+          top: 4418px;
         }
 
         @media (min-width: 900px) {
-          top: 4350px;
+          top: 4488px;
         }
 
         @media (min-width: 978px) {
-          top: 4620px;
+          top: 4758px;
         }
 
         @media (min-width: 1086px) {
-          top: 4870px;
+          top: 5008px;
         }
 
         @media (min-width: 1167px) {
-          top: 5150px;
+          top: 5288px;
         }
       }
     }
